force-app/main/default/objects/NF_Accelerator__c/NF_Accelerator__c.object-meta.xml
<CustomObject>
    <description>NeuraFlash reusable accelerator / asset catalog. Each record represents one reusable solution stored in Playg, Google Drive, OneDrive, or GitHub.</description>
    <label>NF Accelerator</label>
    <nameField>
        <label>Accelerator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NF Accelerators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>