force-app/main/default/objects/NF_Accelerator__c/fields/Asset_Owner__c.field-meta.xml
<CustomField>
    <fullName>Asset_Owner__c</fullName>
    <label>Asset Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>