force-app/main/default/objects/NF_Accelerator__c/fields/Cloud__c.field-meta.xml
<CustomField>
    <fullName>Cloud__c</fullName>
    <label>Cloud</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Sales Cloud</fullName><default>false</default><label>Sales Cloud</label></value>
            <value><fullName>Service Cloud</fullName><default>false</default><label>Service Cloud</label></value>
            <value><fullName>Marketing Cloud</fullName><default>false</default><label>Marketing Cloud</label></value>
            <value><fullName>Commerce Cloud</fullName><default>false</default><label>Commerce Cloud</label></value>
            <value><fullName>Experience Cloud</fullName><default>false</default><label>Experience Cloud</label></value>
            <value><fullName>Agentforce</fullName><default>false</default><label>Agentforce</label></value>
            <value><fullName>MuleSoft</fullName><default>false</default><label>MuleSoft</label></value>
            <value><fullName>Tableau</fullName><default>false</default><label>Tableau</label></value>
            <value><fullName>Platform</fullName><default>false</default><label>Platform</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>