force-app/main/default/objects/NF_Accelerator__c/fields/Complexity__c.field-meta.xml
<CustomField>
    <fullName>Complexity__c</fullName>
    <label>Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Low</fullName><default>false</default><label>Low</label></value>
            <value><fullName>Medium</fullName><default>false</default><label>Medium</label></value>
            <value><fullName>High</fullName><default>false</default><label>High</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>