force-app/main/default/objects/NF_Accelerator__c/fields/Estimated_Hours_Saved__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hours_Saved__c</fullName>
    <label>Estimated Hours Saved</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>