force-app/main/default/objects/NF_Accelerator__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Healthcare</fullName><default>false</default><label>Healthcare</label></value>
            <value><fullName>Financial Services</fullName><default>false</default><label>Financial Services</label></value>
            <value><fullName>Retail</fullName><default>false</default><label>Retail</label></value>
            <value><fullName>Manufacturing</fullName><default>false</default><label>Manufacturing</label></value>
            <value><fullName>Hospitality</fullName><default>false</default><label>Hospitality</label></value>
            <value><fullName>Technology</fullName><default>false</default><label>Technology</label></value>
            <value><fullName>Nonprofit</fullName><default>false</default><label>Nonprofit</label></value>
            <value><fullName>Cross-Industry</fullName><default>false</default><label>Cross-Industry</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>