force-app/main/default/objects/NF_Accelerator__c/fields/Knowledge_Article_URL__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article_URL__c</fullName>
    <label>Knowledge Article URL</label>
    <type>Url</type>
    <description>Direct link to the Salesforce Knowledge Article containing full documentation for this accelerator.</description>
</CustomField>