force-app/main/default/objects/NF_Accelerator__c/fields/Quality_Badge__c.field-meta.xml
<CustomField>
    <fullName>Quality_Badge__c</fullName>
    <label>Quality Badge</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Verified</fullName><default>false</default><label>Verified</label></value>
            <value><fullName>Needs Review</fullName><default>false</default><label>Needs Review</label></value>
            <value><fullName>Deprecated</fullName><default>false</default><label>Deprecated</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>