force-app/main/default/objects/NF_Accelerator__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Playg</fullName><default>false</default><label>Playg</label></value>
            <value><fullName>Google Drive</fullName><default>false</default><label>Google Drive</label></value>
            <value><fullName>OneDrive</fullName><default>false</default><label>OneDrive</label></value>
            <value><fullName>GitHub</fullName><default>false</default><label>GitHub</label></value>
            <value><fullName>Internal</fullName><default>false</default><label>Internal</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>