force-app/main/default/objects/NF_Accelerator__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <length>255</length>
    <type>Text</type>
    <description>Comma-separated keywords used for recommendation matching. E.g. "omni-channel,routing,service,CTI"</description>
</CustomField>