force-app/main/default/objects/NF_Accelerator__c/fields/Use_Count__c.field-meta.xml
<CustomField>
    <fullName>Use_Count__c</fullName>
    <label>Times Used</label>
    <defaultValue>0</defaultValue>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>